 * configure.ac (AC_OUTPUT): Add po/Makefile.in.

2011-04-10  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c duff.h duffdriver.c duffentry.c: Changed gettext macro to _.
 * duff.c duffdriver.c duffentry.c duff.h duffstring.c duffstring.h duffutil.c
   sha1.c sha1.h sha256.c sha256.h sha384.c sha384.h sha512.c
   sha512.h: Moved to src directory.
 * duff.1: Moved to man directory.

2010-08-15  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c (usage): Annotated strings for i18n.
 * duff.c (main): Made digest function name comparison case-insensitive.

2009-09-21  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.h: Added enum typedefs.

2009-09-20  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c (version, usage, bugs): Changed to output to stdout.

2009-09-19  Camilla Berglund  <elmindreda@elmindreda.org>

 * bootstrap.sh: Added instruction to run configure. 
 * duffentry.c (get_entry_digest): Removed broken optimization.
 * duff.1: Added note on file modification.
 * duff.h: Added struct typedefs.

2009-08-09  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (recurse_directory): Added error handling for asprintf.
 * duffentry.c (get_entry_samples): Added error handling for fread.
 * duffutil.c (error, warning): Added error handling for asprintf.
 * duff.c (usage): Clarified wording of help text.

2009-01-16  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c (read_path, kill_trailing_slashes): Moved functions into duffutil.c.
 * duff.h: Added declarations for read_path and kill_trailing_slashes.
 * duff.c (version): Annotated strings for i18n.

2009-01-05  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c (main): Moved option default values into source file.
 * duff.c (main) (usage): Renamed -c flag to -d.

2009-01-04  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c duffdriver.c duffentry.c duffstring.c duffutil.c: Annotated strings for i18n.
 * duff.c (main): Added call to setlocale(3).
